[package]
name = "telemetry-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
include_dir = "0.7.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serialport = { version = "4.2.0", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
warp = "0.3.4"
webbrowser = "0.8.8"
